[package]
name = "log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.4", features = [
  "string",
  "cargo",
  "wrap_help",
  "derive",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
